# Trust-Analytics

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  Makefile  README.md  instructions.yml  metrics.yml  pyproject.toml  setup.sh
deck/: index.html  speaker-notes.md
deck/css/: base.css  slides.css  tokens.css
deck/js/: icons.js  pins.js
deploy/: gcp-cloud-run.md
docs/screenshots/: README.md
logs/: cost.jsonl
outputs/sample/: quality_report.json  question_plans.json  review_panel_rendered.txt  sql_agent_answers.json
prompts/: planner_revise.md  planner_trace.md  qa_layer_b_hypothesis.md  qa_layer_c_compose.md  sql_agent_system.md  sql_agent_user.md
scripts/: browser_smoke.py  capture_ask_example.py  capture_reinvestigation.py  inspect_llm_raw.py  render_review_panel.py
src/pluang_agent/: __init__.py  baseline.py  cli.py  config.py  data_loader.py  db.py  layer_b.py  layer_c.py  llm.py  metadata.py  metrics.py  models.py  planner.py  pre_flight.py  quality_rules.py  questions.py  review.py  sql_attempt.py  sql_runner.py  workflow.py
src/trust_analytics/: __init__.py  api.py  cli.py  config.py  data_loader.py  db.py  layer_b.py  layer_c.py  llm.py  metadata.py  metrics.py  planner.py  portal.py  pre_flight.py  quality_rules.py  questions.py  review.py  sql_attempt.py  sql_runner.py  telemetry.py  workflow.py
tests/: test_answer_shape_validation.py  test_baseline_real_data.py  test_cli_ask.py  test_contracts.py  test_cost_log.py  test_data_loader.py  test_golden_sql.py  test_layer_a_plausibility.py  test_layer_b.py  test_layer_c.py  test_planner.py  test_planner_trace.py  test_portal_api.py  test_pre_flight.py  test_public_copy.py  test_quality_agent_real_data.py  test_replan_question.py  test_review.py  test_scaffold.py  test_sql_attempt.py  test_sql_runner.py  test_synthesize_question.py  test_system_error_escalation.py  test_workflow_reinvestigation.py
web/: index.html
(+23 files in other folders)
