[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-analytics"
version = "1.0.0"
description = "Trustworthy SQL analytics portal for fintech decision workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Jiashun Pang" }
]
dependencies = [
  "fastapi>=0.115",
  "langgraph>=0.2",
  "openai>=1.0",
  "pydantic>=2.0",
  "python-pptx>=1.0",
  "typer>=0.12",
  "rich>=13.0",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "sqlglot>=25.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
trust-analytics = "trust_analytics.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]
